# Genesis-1.3-Version4

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: BeamSolver.h  HDF5base.h  Particle.h  Undulator.h
include/libgenesis13/: Config.h  LatticeConfig.h  genesis.h
scripts/: README.md  astyle-run.sh  in2toml.py  lat2toml.py  lattice_names.py  old2toml.py  toml2in.py  toml2lat.py
scripts/toml_examples/: Aramis.toml  Athos.toml  FERMI.toml
src/Core/: Undulator.cpp
src/gencore/: mainwrap.cpp
src/libgenesis13/core/: Beam.cpp  Beam.h  BeamSolver.cpp  BeamSolver.h  Collective.cpp  Collective.h  Control.cpp  Control.h  EFieldSolver.cpp  EFieldSolver.h  Field.cpp  Field.h  FieldSolver.cpp  FieldSolver.h  Gencore.cpp  Gencore.h  Incoherent.cpp  Incoherent.h  Particle.h  PhysicalConstants.h  TrackBeam.cpp  TrackBeam.h  Undulator.cpp  Undulator.h
src/libgenesis13/core/cuda/: CudaBeamSolver.cu  CudaBeamSolver.h  CudaDeviceFunctions.cu
src/libgenesis13/io/: HDF5Base.cpp  HDF5Base.h  HDF5base.cpp  Output.cpp  Output.h  ReadBeamHDF5.cpp  ReadBeamHDF5.h  ReadFieldHDF5.cpp  ReadFieldHDF5.h  SDDSBeam.cpp  SDDSBeam.h  WriteBeamHDF5.cpp  WriteBeamHDF5.h  WriteFieldHDF5.cpp  WriteFieldHDF5.h
src/libgenesis13/lattice/: AlterLattice.cpp  AlterLattice.h  Lattice.cpp  Lattice.h  LatticeElements.h  LatticeParser.cpp  LatticeParser.h  Optics.cpp  Optics.h
src/libgenesis13/loading/: ImportBeam.cpp  ImportBeam.h  ImportField.cpp  ImportField.h  LoadBeam.cpp  LoadBeam.h  LoadField.cpp  LoadField.h  Profile.cpp  Profile.h  QuietLoading.cpp  QuietLoading.h  ShotNoise.cpp  ShotNoise.h
src/libgenesis13/main/: AlterSetup.cpp  AlterSetup.h  Dump.cpp  Dump.h  EField.cpp  EField.h  GenMain.cpp  GenMain.h  Parser.cpp  Parser.h  Setup.cpp  Setup.h  SponRad.cpp  SponRad.h  Time.cpp  Time.h  Track.cpp  Track.h  Wake.cpp  Wake.h
src/libgenesis13/util/: BesselJ.cpp  BesselJ.h  GaussHermite.cpp  GaussHermite.h  Hammerslay.cpp  Hammerslay.h  Inverfc.cpp  Inverfc.h  RandomU.cpp  RandomU.h  Sequence.h  Sorting.cpp  Sorting.h  StringProcessing.cpp  StringProcessing.h
test/: test_compat_chicane_tmatrix.cpp  test_compat_cyl_bessel_j.cpp  test_compat_erfc_inv.cpp
